app/assets/stylesheets/application.css.scss
//= require reset
//= require ./font_face
//= require_self

@import 'variables';
@import 'mixins';

// Base ----------------------------------------------------------------------
* {
  @include vendor-prefixes(box-sizing, border-box);
  -webkit-font-smoothing: subpixel-antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
body { @include vendor-prefixes(user-select, none) }

body, button, input, legend, textarea {
  font-family: 'Open sans', 'sans-serif';
  font-size: $baseFontSize;
  line-height: 1.5;
  color: $mainTextColor;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
  font-weight: 400;
  margin: 1em 0;
}

a { color: $blueColor }
.no-touch a:focus,
.no-touch a:hover,
.touch a:active {
  color: lighten($blueColor, 10%);
}

// Layout --------------------------------------------------------------------
.wrap {
  width: 78%;
  max-width: 540px;
  margin: auto;
}

.columns { font-size: 0 }
.column-1 { width: 100% }
.column-2 { width: 50% }
.column-3 { width: 33.3333% }
.column {
  display: inline-block;
  vertical-align: top;
  font-size: $baseFontSize;
}

.veil {
  display: none;
  z-index: 1;
  position: fixed;
  top: 0; left: 0;
  bottom: 0; right: 0;

  .show-readability-settings & { display: block }
}

// Fonts ---------------------------------------------------------------------
.font-helvetica { font-family: Helvetica, sans-serif }
.font-times { font-family: Times, serif }
.font-source-code { font-family: 'Source Code Pro', sans-serif }
.font-pt-serif { font-family: 'PT Serif', serif }
.font-open-sans { font-family: 'Open Sans', sans-serif }

// Themes --------------------------------------------------------------------
.theme-1 {
  background-color: #161616;
  [role="main"] { color: #cdcdcd }
  header:before { @include gradient(#161616, rgba(#161616, 0)) }
  footer:before, footer .advanced-menu { @include gradient(rgba(#161616, 0), #161616) }
}

.theme-2 {
  background-color: #3e4243;
  [role="main"] { color: #c3c4c5 }
  header:before { @include gradient(#3e4243, rgba(#3e4243, 0)) }
  footer:before, footer .advanced-menu { @include gradient(rgba(#3e4243, 0), #3e4243) }
}

.theme-3 {
  background-color: #c5cbce;
  [role="main"] { color: #4b5155 }
  header:before { @include gradient(#c5cbce, rgba(#c5cbce, 0)) }
  footer:before, footer .advanced-menu { @include gradient(rgba(#c5cbce, 0), #c5cbce) }
}

.theme-4 {
  background-color: #e6e6e6;
  [role="main"] { color: #414141 }
  header:before { @include gradient(#e6e6e6, rgba(#e6e6e6, 0)) }
  footer:before, footer .advanced-menu { @include gradient(rgba(#e6e6e6, 0), #e6e6e6) }
}

.theme-5 {
  background-color: #fff;
  [role="main"] { color: #202020 }
  header:before { @include gradient(#fff, rgba(#fff, 0)) }
  footer:before, footer .advanced-menu { @include gradient(rgba(#fff, 0), #fff) }
}

// Header --------------------------------------------------------------------
header {
  z-index: 1;
  position: fixed;
  top: 0; left: 2.5%; right: 2.5%;
  font-size: 14px;
  pointer-events: none;

  .advanced-menu {
    z-index: 1;
    position: relative;
    border: 6px solid #e1e1e1;
    border-top: 0;
    @include gradient(#fefefe, #fafafa);
    @include vendor-prefixes(transform, translateY(-100%));
  }

  h1 {
    margin: 0;
    padding: 1em 0;
    color: #b3b3b3;
    font-size: 1.4em;
    border-bottom: 1px solid #c4c4c4;
    &:hover { @include vendor-prefixes(user-select, text) }

    .wrap {
      line-height: 1.3;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: none;
      width: 100%;
      text-align: center;
      padding: 0 147px 0 213px;
      .touch & { text-align: left }
    }

    .author { font-weight: 700 }
    .title:before { content: '-'; padding: 0 .5em 0 .4em }
  }

  a { color: #838383 }

  ul {
    position: absolute;
    top: 0;
    height: 100%;

    &.left  { left: 0; border-right: 1px solid #c4c4c4 }
    &.right { right: 0; border-left: 1px solid #c4c4c4 }
  }

  .library {
    text-transform: uppercase;
    font-weight: 700;
    border-left: 1px solid #f6f6f6;
  }

  .button-advanced-menus {
    position: absolute;
    top: 6px; right: 8px;
    display: block;
    width: 60px; height: 60px;
    background-color: #f9f9f9;
    border-radius: 100%;
    text-align: center;
    pointer-events: all;

    span {
      position: relative;
      top: -2px;
    }

    &:before { content: ''; height: 100%; }
    &:before, span {
      display: inline-block;
      vertical-align: middle;
    }
  }
}

.no-touch header .button-advanced-menus:hover,
.no-touch header .button-advanced-menus:focus,
.touch header .button-advanced-menus:active {
  color: inherit;
  background-color: darken(#f9f9f9, 5%);
}

header li + li { border-left: 1px solid #c4c4c4 }
header li.last { border-left: 0 }
header li {
  float: left;
  list-style-type: none;
  height: 100%;

  & > a {
    display: block;
    height: 100%;
    border-bottom: 1px solid #c4c4c4;
  }

  & > a, .blue-button { padding: 0 1.3em }

  & > a:before { content: ''; height: 100% }
  & > a:before, & > a > span { display: inline-block; vertical-align: middle }

  img { display: block }
}

.no-touch header li > a:hover,
.no-touch header li > a:focus,
.touch header li > a:active {
  color: #838383;
  background-color: rgba(#fff, .8);
}

// Advanced Menus ------------------------------------------------------------
.advanced-menu, .button-advanced-menus {
  @include transform-transition(.2s)
}

.show-advanced-menus {
  header, footer { pointer-events: all }
  header:before, footer:before { height: 200px }
  a.paragraph-count { opacity: 1 }
  .advanced-menu { @include vendor-prefixes(transform, translateY(0)) }
  .button-advanced-menus { @include vendor-prefixes(transform, translateY(-25%) scale(0)) }
}
/* ... */

